--- a/src/app/exercise1/exercise1.component.html
+++ b/src/app/exercise1/exercise1.component.html
@@ -5,7 +5,7 @@
   <li>Run <code>npm i -g json-server</code> in that terminal to download the server that's going to run our sample back-end</li>
   <li>Run <code>json-server --watch json/db.json</code> to start our sample back-end</li>
   <li>Update the code in <code>app/exercise1</code> so that our component loads its list of countries from <code>http://localhost:3000/countries</code></li>
-  <li>Display the total number of countries in the dropdown should be displayed in the corresponding <code>div</code></li>
+  <li>Display the total number of countries in the corresponding <code>div</code></li>
   <li>Selecting a country should result in the <code>id</code> of the country being set as the dropdown value</li>
 </ol>
 <h4>You can take a look at the expected result here: <a routerLink="/solution/1">http://localhost:4200/solution/1</a> </h4>
