--- a/src/app/exercise2/exercise2.component.html
+++ b/src/app/exercise2/exercise2.component.html
@@ -4,6 +4,7 @@
   <li>Make sure that the state dropdown is disabled when no country is selected as well as when the selected country has no state information</li>
   <li>Update the code in <code>app/exercise2</code> so that our component loads its list of states from <code>http://localhost:3000/states?countryCode=US</code> and use the right country code as a parameter</li>
   <li>Display the total number of states (for the selected country) in the corresponding <code>div</code></li>
+  <li>States should be displayed in alphabetical order and using title case</li>
   <li>Selecting a state should result in the <code>code</code> of the state being set as the dropdown value</li>
 </ol>
 <h4>You can take a look at the expected result here: <a routerLink="/solution/2">http://localhost:4200/solution/2</a> </h4>
