Solution for exercise #3

--- a/src/app/exercise3/exercise3.component.html
+++ b/src/app/exercise3/exercise3.component.html
@@ -4,7 +4,7 @@
   <li>If the user types 'Ca' then only the countries that have 'ca' in their name should show up in the list</li>
   <li>The filter should not be case-sensitive</li>
   <li>The matching portion of the country name should be rendered in <b>bold text</b>, for instance: <b>Ca</b>nada</li>
-  <li>The same behavior should be applied to the state dropdown</li>
+  <li>Do not worry about applyong the same behavior to the state dropdown for now. Just make sure that the state dropdown still works after your changes.</li>
 </ol>
 <h4>You can take a look at the expected result here: <a routerLink="/solution/3">http://localhost:4200/solution/3</a> </h4>
 <hr>
