--- a/src/app/exercise4/exercise4.component.html
+++ b/src/app/exercise4/exercise4.component.html
@@ -1,10 +1,10 @@
 <h2>Exercise 4</h2>
-<h3>Your mission is to find a way to refactor the behavior implemented in exercise 3 in order to use that same functionality on the state dropdown</h3>
+<h3>Your mission is to implement the behavior of exercise 3 on the state dropdown</h3>
 <ol>
-  <li>If the user types 'Ca' then only the countries that have 'ca' in their name should show up in the list</li>
+  <li>If the selected country is Canada, when the user types 'Al' in the state input then only 'Alberta' should show up in the list</li>
   <li>The filter should not be case-sensitive</li>
-  <li>The matching portion of the country name should be rendered in <b>bold text</b>, for instance: <b>Ca</b>nada</li>
-  <li>Do not worry about applying the same behavior to the state dropdown for now. Just make sure that the state dropdown still works after your changes.</li>
+  <li>The matching portion of the state/province name should be rendered in <b>bold text</b>, for instance: <b>Al</b>berta</li>
+  <li>Do not worry about refactoring the code for now. Just make sure that both countries and states can be changed and that everything works.</li>
 </ol>
 <h4>You can take a look at the expected result here: <a routerLink="/solution/4">http://localhost:4200/solution/4</a> </h4>
 <hr>
