Solution for exercise #5

--- a/src/app/solution/solution5/solution5.component.html
+++ b/src/app/solution/solution5/solution5.component.html
@@ -1,24 +1,18 @@
 <h2>Solution 5</h2>
 <h2>Result</h2>
 <div >
-  <div class="dropdown">
-    <input type="text" class="dropbtn" [formControl]="countryControl"
-           placeholder="Enter country name" >
-    <div class="dropdown-content" *ngIf="countries$ | async as countries">
-      <span *ngFor="let country of countries" (click)="updateStates(country)"
-            [innerHTML]="country.description | highlight: countryControl.value">
-      </span>
-    </div>
-  </div>
+  <app-autofilter-dropdown [entries$]="countries$" (selectionChange)="updateStates($event)"
+                           placeholder="Enter your country">
+  </app-autofilter-dropdown>
 </div>
 <div >
-  <div class="dropdown">
-    <input type="text" class="dropbtn" [formControl]="stateControl"
-           placeholder="Enter your state">
-    <div class="dropdown-content" *ngIf="states$ | async as states">
-      <span *ngFor="let s of states" (click)="stateControl.setValue(s.description)"
-            [innerHTML]="s.description | titlecase | highlight: stateControl.value">
-      </span>
-    </div>
-  </div>
+  <app-autofilter-dropdown [entries$]="statesForCountry$" [(selection)]="state"
+                           placeholder="Enter your state">
+  </app-autofilter-dropdown>
+</div>
+<hr>
+<div>
+  Current selection<br>
+  Country: {{country | json}} <br>
+  State: {{state | json}}
 </div>
