Added some extra instructions

--- a/src/app/exercise5/exercise5.component.html
+++ b/src/app/exercise5/exercise5.component.html
@@ -1,9 +1,10 @@
 <h2>Exercise 5</h2>
-<h3>Your mission is to refactor our two dropdowns into one component</h3>
+<h3>Your mission is to refactor our two dropdowns code into one component</h3>
 <ol>
   <li>The code for both our country and state dropdowns is very similar</li>
-  <li>Create a component that refactors the behavior of those dropdowns in one single place</li>
+  <li>Create a component that refactors the behavior of those dropdowns in one single reusable component</li>
   <li>Then use two instances of that component, one for country selection, one for state selection</li>
+  <li>Render both currently selected <code>country</code> and <code>state</code> as JSON below the dropdowns</li>
 </ol>
 <h4>You can take a look at the expected result here: <a routerLink="/solution/5">http://localhost:4200/solution/5</a> </h4>
 <hr>
