--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -5,5 +5,6 @@
   <li><a routerLink="exercise3">Exercise #3</a> </li>
   <li><a routerLink="exercise4">Exercise #4</a> </li>
   <li><a routerLink="exercise5">Exercise #5</a> </li>
+  <li><a routerLink="exercise6">Exercise #6</a> </li>
 </ul>
 
