--- a/src/app/solution/solution6/solution6.component.html
+++ b/src/app/solution/solution6/solution6.component.html
@@ -3,3 +3,7 @@
 <div >
    <button [action]="action$" defaultText="Save" textWhenWorking="Saving..." textWhenDone="Saved!"></button>
 </div>
+<br> <br>
+<div>
+   <a href="javascript:none()" [action]="action$" defaultText="Save from a link" textWhenWorking="Saving..." textWhenDone="Saved!"></a>
+</div>
