--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -6,5 +6,6 @@
   <li><a routerLink="exercise4">Exercise #4</a> </li>
   <li><a routerLink="exercise5">Exercise #5</a> </li>
   <li><a routerLink="exercise6">Exercise #6</a> </li>
+  <li><a routerLink="exercise7">Exercise #7</a> </li>
 </ul>
 
