--- a/src/app/solution/solution7/solution7.component.html
+++ b/src/app/solution/solution7/solution7.component.html
@@ -3,7 +3,7 @@
 <div >
   <app-state-button [action]="action$">
     <button default>Save</button>
-    <button working><img src='https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif'/></button>
+    <button working><img src='assets/loader.gif'/></button>
     <button done>Saved!</button>
   </app-state-button>
 
@@ -12,7 +12,7 @@
 <div>
   <app-state-button [action]="action$">
     <a default href="javascript:none()" >Save from a link</a>
-    <img working src='https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif'/>
+    <img working src='assets/loader.gif'/>
     <h4 done>Done!</h4>
   </app-state-button>
 </div>
