--- a/src/app/solution/solution2/solution2.component.html
+++ b/src/app/solution/solution2/solution2.component.html
@@ -10,11 +10,13 @@
   <div>Current value: {{countryDropdown.value}}</div>
 </div>
 <div *ngIf="states$ | async as states">
-  <div>Select one of {{states.length}} states/provinces:</div>
-  <select #statesDropdown [disabled]="states.length == 0">
-    <option *ngFor="let state of states" [value]="state.code">
-      {{state.description | titlecase}}
-    </option>
-  </select>
-  <div>Current value: {{statesDropdown.value}}</div>
+  <ng-container *ngIf="states.length > 0">
+    <div>Select one of {{states.length}} states/provinces:</div>
+    <select #statesDropdown [disabled]="states.length == 0">
+      <option *ngFor="let state of states" [value]="state.code">
+        {{state.description | titlecase}}
+      </option>
+    </select>
+    <div>Current value: {{statesDropdown.value}}</div>
+  </ng-container>
 </div>
