Added hint to exercise #4

--- a/src/app/exercise4/exercise4.component.html
+++ b/src/app/exercise4/exercise4.component.html
@@ -7,6 +7,10 @@
   <li>Do not worry about refactoring the code for now. Just make sure that both countries and states can be changed and that everything works.</li>
 </ol>
 <h4>You can take a look at the expected result here: <a routerLink="/solution/4">http://localhost:4200/solution/4</a> </h4>
+<h4>Hint</h4>
+<p>
+  You might want to take a look at the following RxJs operators: <code>switchMap</code> and <code>combineLatest</code>
+</p>
 <hr>
 <h2>Result</h2>
 <div >
