--- a/src/app/solution/solution4/solution4.component.html
+++ b/src/app/solution/solution4/solution4.component.html
@@ -4,8 +4,8 @@
   <div class="dropdown">
     <input type="text" class="dropbtn" [formControl]="countryControl"
            placeholder="Enter country name" >
-    <div class="dropdown-content" *ngIf="countries$ | async as countries">
-      <span *ngFor="let country of countries" (click)="updateStates(country)"
+    <div class="dropdown-content">
+      <span *ngFor="let country of countries$ | async" (click)="updateStates(country)"
             [innerHTML]="country.description | highlight: countryControl.value">
       </span>
     </div>
@@ -15,8 +15,8 @@
   <div class="dropdown">
     <input type="text" class="dropbtn" [formControl]="stateControl"
            placeholder="Enter your state">
-    <div class="dropdown-content" *ngIf="states$ | async as states">
-      <span *ngFor="let s of states" (click)="stateControl.setValue(s.description)"
+    <div class="dropdown-content">
+      <span *ngFor="let s of states$ | async" (click)="stateControl.setValue(s.description)"
             [innerHTML]="s.description | titlecase | highlight: stateControl.value">
       </span>
     </div>
