--- a/src/app/solution/solution7/solution7.component.html
+++ b/src/app/solution/solution7/solution7.component.html
@@ -11,7 +11,7 @@
 <br> <br>
 <div>
   <app-state-button [action]="action$">
-    <a default href="javascript:none()" >Save from a link</a>
+    <a default href="javascript:" >Save from a link</a>
     <img working src='assets/loader.gif'/>
     <h4 done>Done!</h4>
   </app-state-button>
