Changed exercise #7 a bit

--- a/src/app/exercise7/exercise7.component.html
+++ b/src/app/exercise7/exercise7.component.html
@@ -12,4 +12,4 @@
 <h2>Result</h2>
 <button>Save</button>
 <br> <br>
-<a href="javascript:none()">Save from a link</a>
+<a href="javascript:">Save from a link</a>
