Updated to Angular 15

--- a/src/app/exercise1/exercise1.component.html
+++ b/src/app/exercise1/exercise1.component.html
@@ -13,10 +13,10 @@
 <!-- Edit the code down below to implement the requested features -->
 <div>
   <div>Select one of 0 countries:</div>
-  <select #countryDropdown>
+  <select>
     <option>
-      United States (hardcoded)
+      United States
     </option>
   </select>
-  <div>Current value: {{countryDropdown.value}}</div>
+  <div>Current value: US</div>
 </div>
