--- a/src/app/solution/solution2/solution2.component.html
+++ b/src/app/solution/solution2/solution2.component.html
@@ -17,6 +17,6 @@
         {{state.description | titlecase}}
       </option>
     </select>
-    <div>Current value: {{statesDropdown.value}}</div>
+    <div>Current value: {{statesDropdown?.value}}</div>
   </ng-container>
 </div>
