--- a/src/app/exercise2/exercise2.component.html
+++ b/src/app/exercise2/exercise2.component.html
@@ -12,7 +12,7 @@
 <h2>Result</h2>
 <div *ngIf="countries$ | async as countries">
   <div>Select one of {{countries.length}} countries:</div>
-  <select #countryDropdown>
+  <select [formControl]="countryDropdown">
     <option *ngFor="let country of countries" [value]="country.id">
       {{country.description}}
     </option>
