Added animated instructions

--- a/src/app/exercise1/exercise1.component.html
+++ b/src/app/exercise1/exercise1.component.html
@@ -1,5 +1,6 @@
 <h2>Exercise 1</h2>
 <h3>Your mission is to turn the following dropdown into a country-selection dropdown. </h3>
+<img src="assets/exercise1.gif" />
 <ol>
   <li>Open a terminal in your project <code>ng-advanced-workshop</code></li>
   <li>Run <code>npm run server</code> to start the sample back-end that holds the data needed for all exercises</li>
