--- a/src/app/exercise2/exercise2.component.html
+++ b/src/app/exercise2/exercise2.component.html
@@ -1,5 +1,6 @@
 <h2>Exercise 2</h2>
 <h3>Your mission is to connect the two following dropdowns so that the state/province dropdown gets populated with data from the selected country.</h3>
+<img src="assets/exercise2.gif" />
 <ol>
   <li>Make sure that the state dropdown is disabled when no country is selected as well as when the selected country has no state information</li>
   <li>Update the code in <code>app/exercise2</code> so that our component loads its list of states from <code>http://localhost:3000/states?countryCode=US</code> and use the right country code as a parameter</li>
