--- a/src/app/exercise3/exercise3.component.html
+++ b/src/app/exercise3/exercise3.component.html
@@ -1,5 +1,6 @@
 <h2>Exercise 3</h2>
 <h3>Your mission is to update our dropdowns so the user can type a value to filter out the dropdown contents</h3>
+<img src="assets/exercise3.gif" />
 <ol>
   <li>If the user types 'Ca' then only the countries that have 'ca' in their name should show up in the list</li>
   <li>The filter should not be case-sensitive</li>
