--- a/src/app/exercise4/exercise4.component.html
+++ b/src/app/exercise4/exercise4.component.html
@@ -1,5 +1,6 @@
 <h2>Exercise 4</h2>
 <h3>Your mission is to implement the behavior of exercise 3 on the state dropdown</h3>
+<img src="assets/exercise4.gif" />
 <ol>
   <li>If the selected country is Canada, when the user types 'Al' in the state input then only 'Alberta' should show up in the list</li>
   <li>The filter should not be case-sensitive</li>
