--- a/src/app/exercise5/exercise5.component.html
+++ b/src/app/exercise5/exercise5.component.html
@@ -1,5 +1,6 @@
 <h2>Exercise 5</h2>
 <h3>Your mission is to refactor our two dropdowns code into one component</h3>
+<img src="assets/exercise5.gif" />
 <ol>
   <li>The code for both our country and state dropdowns is very similar</li>
   <li>Create a component that refactors the behavior of those dropdowns in one single reusable component</li>
