--- a/src/app/exercise6/exercise6.component.html
+++ b/src/app/exercise6/exercise6.component.html
@@ -1,5 +1,6 @@
 <h2>Exercise 6</h2>
 <h3>Your mission is to create a solution that turns a clickable element into an action trigger with 3 states</h3>
+<img src="assets/exercise6.gif" />
 <ol>
   <li>For instance, I could use that solution on a button with 3 possible text labels: <code>Save</code>, <code>Saving...</code>, and <code>Saved!</code></li>
   <li>An <code>action</code> would be passed as an <code>Observable</code>. When the button is clicked, the action is triggered and the button text changes to <code>Saving...</code></li>
