--- a/src/app/exercise7/exercise7.component.html
+++ b/src/app/exercise7/exercise7.component.html
@@ -1,5 +1,6 @@
 <h2>Exercise 7</h2>
 <h3>Your mission is to customize the previous solution even further by being able to provide three different HTML elements for every single state</h3>
+<img src="assets/exercise7.gif" />
 <ol>
   <li>For instance, I could use that solution to initially display a <code>Save</code> button</li>
   <li>Then the button becomes a spinner image when clicked</li>
