--- a/src/app/exercise3/exercise3.component.html
+++ b/src/app/exercise3/exercise3.component.html
@@ -11,13 +11,13 @@
 <hr>
 <h2>Result</h2>
 <!-- type country -->
-<div *ngIf="countries$ | async as countries">
+<div>
   <div class="dropdown">
     <input type="text" class="dropbtn"
-    [formControl]="countryValue" [value]="country?.description" placeholder="Enter country name">
-    <div class="dropdown-content">
+    [formControl]="countryValue" placeholder="Enter country name">
+    <div class="dropdown-content" *ngIf="countries$ | async as countries">
       <span *ngFor="let country of countries" (click)="updateStates(country)"
-      [innerHTML]="country.description | bold:countryValue.value">
+      [innerHTML]="country.description | bold: countryValue.value | titlecase">
         </span>
     </div>
   </div>
