--- a/src/app/exercise5/exercise5.component.html
+++ b/src/app/exercise5/exercise5.component.html
@@ -11,24 +11,14 @@
 <hr>
 <h2>Result</h2>
 <div >
-  <div class="dropdown">
-    <input type="text" class="dropbtn" [formControl]="countryControl"
-           placeholder="Enter country name" >
-    <div class="dropdown-content" *ngIf="countries$ | async as countries">
-      <span *ngFor="let country of countries" (click)="updateStates(country)"
-            [innerHTML]="country.description | highlight: countryControl.value">
-      </span>
-    </div>
-  </div>
+    <!-- pass needed data for country drop down to child -->
+    <app-reusable-filter-dropdown [List$]="countries$" (selectedEvent)="selected($event)" 
+    placeholder="Enter country name"></app-reusable-filter-dropdown>
 </div>
 <div >
-  <div class="dropdown">
-    <input type="text" class="dropbtn" [formControl]="stateControl"
-           placeholder="Enter your state">
-    <div class="dropdown-content" *ngIf="states$ | async as states">
-      <span *ngFor="let s of states" (click)="stateControl.setValue(s.description)"
-            [innerHTML]="s.description | titlecase | highlight: stateControl.value">
-      </span>
-    </div>
-  </div>
+    <!-- pass needed data for states drop down to child and retrieve country chosen -->
+    <app-reusable-filter-dropdown [List$]="statesForCountry$" [(select)]="states"
+    placeholder="Enter your state"></app-reusable-filter-dropdown>
 </div>
+<div>Country Selected: {{ data.Country | json }}</div>
+<div>State/Province Selected{{ data.State | json}}</div>
