--- a/src/app/exercise5/reusable-filter-dropdown/reusable-filter-dropdown.component.html
+++ b/src/app/exercise5/reusable-filter-dropdown/reusable-filter-dropdown.component.html
@@ -2,7 +2,7 @@
  <input type="text" class="dropbtn" [formControl]="input"
  [placeholder]="placeholder">
     <div class="dropdown-content" *ngIf="inputs$ | async as lists">
-      <span *ngFor="let list of lists" (click)="updateChoice(list)"
+      <span *ngFor="let list of lists" (click)="update(list)"
             [innerHTML]="list.description | highlight: input.value">
       </span>
     </div>
